# ibis-birdbrain

./: .gitignore  LICENSE  README.md  _quarto.yml  about.html  architecture.excalidraw  bot.excalidraw  config.toml  demo.html  demo_setup.py  dev-requirements.txt  example_data.py  index.html  install.html  justfile  listings.json  posts.html  posts.xml  presentation.qmd  pyproject.toml  release_notes.html  robots.txt  search.json  sitemap.xml  system.excalidraw  untitled.ipynb  why.html
.github/workflows/: docs.yaml
app/: app.py  state.py  styles.py
app/components/: chat.py  modal.py  navbar.py  sidebar.py
concepts/: attachments.html  bots.html  flows.html  llms.html  messages.html  ops.html  platforms.html  tasks.html  user-interfaces.html
concepts/archive/: llms.html  ops.html  platforms.html  user-interfaces.html
contribute/: contributing.html
docs/: .gitignore  _quarto.yml  about.qmd  demo.qmd  index.qmd  install.qmd  posts.qmd  release_notes.md  why.qmd
docs/concepts/: attachments.qmd  bots.qmd  flows.qmd  llms.qmd  messages.qmd  ops.qmd  platforms.qmd  tasks.qmd  user-interfaces.qmd
docs/concepts/archive/: llms.qmd  ops.qmd
docs/contribute/: contributing.qmd
docs/how-to/input-output/: basics.qmd
docs/posts/: _metadata.yml
docs/posts/llms-and-data-pt0/: index.qmd
docs/posts/llms-and-data-pt1/: index.qmd
docs/posts/llms-and-data-pt2/: index.qmd
docs/posts/llms-and-data-pt3/: index.ipynb  index.qmd
docs/posts/llms-and-data-pt4/: index.qmd
docs/posts/llms-and-data-pt5/: index.qmd
docs/posts/llms-and-data-pt6/: index.qmd
docs/tutorials/: cli.qmd  python.qmd  rest.qmd
examples/imdb_project/: README.md  config.toml  justfile  requirements.txt
examples/imdb_project/dag/: __init__.py  (+3 more)
examples/penguins_project/: .gitignore  README.md  justfile  penguins.xlsx  requirements.txt
examples/streamlit_app/: app.py  example_data.py  requirements.txt
how-to/input-output/: basics.html
posts/llms-and-data-pt0/: index.html
posts/llms-and-data-pt1/: index.html
posts/llms-and-data-pt2/: index.html
posts/llms-and-data-pt3/: index.html
posts/llms-and-data-pt4/: index.html
posts/llms-and-data-pt5/: index.html
posts/llms-and-data-pt6/: index.html
reference/: code.html  eda.html  filesystem.html  index.html  internet.html
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/birdbrain/: __init__.py  __main__.py  ai.py  app.py  classifiers.py  functions.py  states.py  systems.py
src/ibis_birdbrain/: __init__.py  __main__.py  ai.py  app.py  bot.py  classifiers.py  cli.py  filesystem.py  functions.py  lui.py  models.py  platforms.py  rest.py  states.py  strings.py  systems.py  utils.py
tutorials/: cli.html  python.html  rest.html
web/: .gitignore  _quarto.yml  index.qmd
web/_site/: about.html  demo.html  index.html  robots.txt  search.json  sitemap.xml
(+86 files in other folders)
