[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibis-birdbrain"
version = "0.1.0"
authors = [
  { name="Cody", email="cody@dkdc.dev" },
]
description = "the portable Python ML-powered data bot"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'ipython',
  'python-dotenv',
  'toml',
  'Pillow',
  'typer[all]',
  'requests',
  'html2text',
  'duckduckgo-search',
  'openai',
  'marvin~=1.3.0',
  'ibis-framework[duckdb,polars,deltalake]',
  'plotly',
  'streamlit',
]

[project.urls]
"Homepage" = "https://github.com/ibis-project/ibis-birdbrain"
"Bug Tracker" = "https://github.com/ibis-project/ibis-birdbrain/issues"

[project.scripts]
birdbrain = "ibis_birdbrain.cli:app"

